...
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_client_id"
            app:endIconMode="clear_text">

            <AutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/autoCompleteClientID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_waiting_time"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/editTextWaitingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
...
